[package]
name = "ext4fs"
version = "0.0.0"
edition = "2021"

[features]
# Use Rust std library
std = []
# Use dynamic allocation. When used without std please enable core_io/collections
alloc = []
# Enable only error-level logging
log_level_error = []
# Enable logging levels warn and up
log_level_warn  = ["log_level_error"]
# Enable logging levels info and up
log_level_info  = ["log_level_warn"]
# Enable logging levels debug and up
log_level_debug = ["log_level_info"]
# Enable all logging levels: trace and up
log_level_trace = ["log_level_debug"]

# Default features
# default = ["chrono", "std", "alloc", "lfn", "unicode", "log_level_trace"]
default = ["alloc", "std", "log_level_trace"]

[dependencies]
log = { version = "0.4", default-features = false }

[dev-dependencies]
env_logger = "0.11"
fscommon = "0.1"